Add example of permanently marked stars in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -172,10 +172,10 @@
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
               <div id="rate1" class="stars">
-                <a class="s1 full active" href="#"></a>
-                <a class="s2 full" href="#"></a>
-                <a class="s3" href="#"></a>
-                <a class="s4" href="#"></a>
+                <a class="s1 permanent" href="#"></a>
+                <a class="s2 permanent" href="#"></a>
+                <a class="s3 permanent" href="#"></a>
+                <a class="s4 permanent" href="#"></a>
                 <a class="s5" href="#"></a>
               </div>
             </div>
