Work on features section markup/styles

--- a/src/index.html
+++ b/src/index.html
@@ -111,6 +111,65 @@
     </div>
   </header>
   <div class="section--features">
+
+    
+<!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+    <div class="container features">
+      <div class="row">
+        <div class="col col-4 hot-deals">
+          <div class="top-bar">
+            Hot deals
+            <div class="col-auto dots">
+                <ul>
+                  <li><a href="#" class="active"></a></li>
+                  <li><a href="#"></a></li>
+                  <li><a href="#"></a></li>
+                </ul>
+            </div>
+          </div>
+          <div class="photo text-center">
+            <div class="hover">
+              <button class="btn-main"><span></span>Add to cart</button>
+              <div class="counter">
+                <div><h1>25</h1><h2>days</h2></div>
+                <div><h1>10</h1><h2>hrs</h2></div>
+                <div><h1>45</h1><h2>mins</h2></div>
+                <div><h1>30</h1><h2>secs</h2></div>
+              </div>
+            </div>
+          </div>
+          <div class="bottom-bar">
+            <p>Aenean Ru Britisque</p>
+            <div class="stars">
+              <a href="#" class="full"></a>
+              <a href="#" class="full"></a>
+              <a href="#"></a>
+              <a href="#"></a>
+              <a href="#"></a>
+            </div>
+            slider
+            <div class="outlines">
+              <a href="#" class="btn-outline"><i class="fas fa-eye"></i></a>
+              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col col-8 furniture text-center">
+          <div class="content">
+            <h1>Indoor <span>furniture</span></h1>
+            <h2>Save up to 50% of all furniture</h2>
+            <button class="btn-main">Shop now</button>
+          </div>
+          <div class="buttons">
+            <button class="btn-main"><span class="fas fa-arrow-left"></span></button>
+            <button class="btn-main"><span class="fas fa-arrow-right"></span></button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+<!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
     <div class="container">
       <div class="row">
         <div class="col">
