Add section deals

--- a/src/index.html
+++ b/src/index.html
@@ -158,6 +158,31 @@
       </div>
     </div>
   </div>
+  <div class="section--deals">
+    <div class="container">
+      <div class="deals-thumbnail-big col">
+        <div class="thumbnail-big-overlay">
+          <h2>guest room <br> <span>sofa</span></h2>
+          <h2>-20%</h2> 
+        </div>
+      </div>
+      <div class="deals-thumbnails-small col">
+        <div class="deals-thumbnail-top">
+          <div class="thumbnail-top-text">
+            <h2>office <span>chair</span></h2>
+            <h5>collection</h5>
+            <h3>$ 200.00</h3>
+          </div>
+        </div>
+        <div class="deals-thumbnail-bottom">
+          <div class="thumbnail-bottom-text">
+            <h4>special <span>collection</span></h4>
+            <h4>save up 45% of furniture</h4> 
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="section--products">
     <div class="container">
       <div class="panel-bar">
