Add RWD to section deals

--- a/src/index.html
+++ b/src/index.html
@@ -160,13 +160,13 @@
   </div>
   <div class="section--deals">
     <div class="container">
-      <div class="deals-thumbnail-big col">
+      <div class="deals-thumbnail-big col-12 col-sm-12 col-lg-6">
         <div class="thumbnail-big-overlay">
           <h2>guest room <br> <span>sofa</span></h2>
           <h2>-20%</h2> 
         </div>
       </div>
-      <div class="deals-thumbnails-small col">
+      <div class="deals-thumbnails-small col-12 col-sm-12 col-lg-6">
         <div class="deals-thumbnail-top">
           <div class="thumbnail-top-text">
             <h2>office <span>chair</span></h2>
