--- a/src/index.html
+++ b/src/index.html
@@ -210,7 +210,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -242,7 +242,7 @@
               </div>
               <div class="price">
                   <div class="price-old">$ 35.00</div>
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small ">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -274,7 +274,7 @@
               </div>
               <div class="price">
                 <div class="price-old">$ 50.00</div>
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small ">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -305,7 +305,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small ">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -337,7 +337,7 @@
               </div>
               <div class="price">
                   <div class="price-old">$ 50.00</div>
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small ">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -368,7 +368,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small ">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -399,7 +399,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small ">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -431,7 +431,7 @@
               </div>
               <div class="price">
                   <div class="price-old">$ 40.00</div>
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small ">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -475,7 +475,7 @@
                 <p>Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi. Nullam euismod leo
                   vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
                 <div class="more">
-                  <span class="btn-main no-hover">Read more</span>
+                  <span class="btn-main ">Read more</span>
                 </div>
               </div>
             </a>
@@ -499,7 +499,7 @@
                 <p>Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi. Nullam euismod leo
                   vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
                 <div class="more">
-                  <span class="btn-main no-hover">Read more</span>
+                  <span class="btn-main ">Read more</span>
                 </div>
               </div>
             </a>
@@ -523,7 +523,7 @@
                 <p>Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi. Nullam euismod leo
                   vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
                 <div class="more">
-                  <span class="btn-main no-hover">Read more</span>
+                  <span class="btn-main ">Read more</span>
                 </div>
               </div>
             </a>
