--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
           </div>
           <div class="photo text-center">
             <div class="hover">
-              <button class="btn-main"><span></span>Add to cart</button>
+              <button class="btn-main"><span class="fas fa-shopping-basket"></span>  Add to cart</button>
               <div class="counter">
                 <div><h1>25</h1><h2>days</h2></div>
                 <div><h1>10</h1><h2>hrs</h2></div>
@@ -147,11 +147,17 @@
               <a href="#"></a>
               <a href="#"></a>
             </div>
-            slider
+            <div class="slider">
+              <div class="slide1"></div>
+            </div>
             <div class="outlines">
               <a href="#" class="btn-outline"><i class="fas fa-eye"></i></a>
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
+            </div>
+            <div class="price">
+              <div class="price-old">$ 35.00</div>
+              <div class="btn-main-small">$ 30.00</div>
             </div>
           </div>
         </div>
