--- a/src/index.html
+++ b/src/index.html
@@ -111,17 +111,14 @@
     </div>
   </header>
   <div class="section--features">
-
-    
-<!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
     <div class="container features">
       <div class="row">
         <div class="col col-4 hot-deals">
           <div class="top-bar">
             Hot deals
-            <div class="col-auto dots">
+            <div class="dots">
                 <ul>
-                  <li><a href="#" class="active"></a></li>
+                  <li class="active"><a href="#"></a></li>
                   <li><a href="#"></a></li>
                   <li><a href="#"></a></li>
                 </ul>
