--- a/src/index.html
+++ b/src/index.html
@@ -162,22 +162,22 @@
     <div class="container">
       <div class="deals-thumbnail-big col-12 col-sm-12 col-lg-6">
         <div class="thumbnail-big-overlay">
-          <h2>guest room <br> <span>sofa</span></h2>
-          <h2>-20%</h2> 
+          <h2 class="thumbnail-big-h2">guest room <br> <span class="thumbnail-big-h2-span">sofa</span></h2>
+          <h2 class="thumbnail-big-h2">-20%</h2> 
         </div>
       </div>
       <div class="deals-thumbnails-small col-12 col-sm-12 col-lg-6">
         <div class="deals-thumbnail-top">
           <div class="thumbnail-top-text">
-            <h2>office <span>chair</span></h2>
-            <h5>collection</h5>
-            <h3>$ 200.00</h3>
+            <h2 class="thumbnail-top-h2">office <span class="thumbnail-top-h2-span">chair</span></h2>
+            <h5 class="thumbnail-top-h5">collection</h5>
+            <h3 class="thumbnail-top-h3">$ 200.00</h3>
           </div>
         </div>
         <div class="deals-thumbnail-bottom">
           <div class="thumbnail-bottom-text">
-            <h4>special <span>collection</span></h4>
-            <h4>save up 45% of furniture</h4> 
+            <h4 class="thumbnail-bottom-h4">special <span class="thumbnail-bottom-h4-span">collection</span></h4>
+            <h4 class="thumbnail-bottom-h4">save up 45% of furniture</h4> 
           </div>
         </div>
       </div>
