--- a/src/index.html
+++ b/src/index.html
@@ -532,6 +532,48 @@
       </div>
     </div>
   </div>
+  <div class="section--brands">
+    <div class="container">
+      <div class="row logos">
+        <div class="arrow arr-left">
+          <span class="fas fa-arrow-left"></span>
+        </div>
+        <div class="col-2">
+          <div class="logoBox">
+            <img class="logo" src="images/brands/brand1.png"/>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="logoBox">
+            <img class="logo" src="images/brands/brand2.png"/>
+            </div>
+        </div>
+        <div class="col-2">
+          <div class="logoBox">
+            <img class="logo" src="images/brands/brand3.png"/>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="logoBox">
+            <img class="logo" src="images/brands/brand4.png"/>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="logoBox">
+            <img class="logo" src="images/brands/brand5.png"/>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="logoBox">
+            <img class="logo" src="images/brands/brand1.png"/>
+          </div>
+        </div>
+        <div class="arrow arr-right">
+          <span class="fas fa-arrow-right"></span>
+        </div>
+      </div>
+    </div>
+  </div>
   <footer>
     <div class="footer-menu">
       <div class="container">
