Add section feedback

--- a/src/index.html
+++ b/src/index.html
@@ -532,6 +532,40 @@
       </div>
     </div>
   </div>
+  <div class="section--feedback">
+    <div class="container">
+      <div class="panel-bar">
+        <div class="row no-gutters align-items-end">
+          <div class="col-auto heading">
+            <h3>Clients Feedback</h3>
+          </div>
+          <div class="col"></div>
+          <div class="col-auto dots">
+            <ul>
+              <li><a href="#" class="active"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col feedback-wrapper">
+            <i class="fas fa-quote-right quote-mark"></i>
+            <p class="feedback-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam magni quibusdam molestias, eligendi suscipit voluptatum inventore culpa minima odio alias possimus id. Dignissimos tenetur, tempore explicabo nemo alias earum deleniti.</p>
+            <div class="feedback-client">
+              <div class="feedback-client-photo">
+                <img class="feedback-client-img" src="https://images.unsplash.com/photo-1474176857210-7287d38d27c6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5deb261ae9b9799a30f929c724286bed&auto=format&fit=crop&w=1950&q=80" alt="">
+              </div>
+              <div class="feedback-client-info">
+                <p class="client-name">John Smith</p>
+                <p class="client-origin">Furniture client</p>
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <footer>
     <div class="footer-menu">
       <div class="container">
