modify stylesin section features

--- a/src/index.html
+++ b/src/index.html
@@ -138,8 +138,9 @@
   <div class="section--features">
     <div class="container">
       <div class="row">
-        <div class="col">
-          <div class="feature-box active">
+        <a href="#">
+          <div class="col">
+          <div class="feature-box">
             <div class="icon">
               <i class="fas fa-truck"></i>
             </div>
@@ -149,6 +150,8 @@
             </div>
           </div>
         </div>
+      </a>  
+      <a href="#">
         <div class="col">
           <div class="feature-box">
             <div class="icon">
@@ -160,6 +163,8 @@
             </div>
           </div>
         </div>
+      </a>
+      <a href="#">  
         <div class="col">
           <div class="feature-box">
             <div class="icon">
@@ -171,6 +176,8 @@
             </div>
           </div>
         </div>
+      </a>
+      <a href="#">  
         <div class="col">
           <div class="feature-box">
             <div class="icon">
@@ -182,6 +189,7 @@
             </div>
           </div>
         </div>
+      </a>  
       </div>
     </div>
   </div>
