--- a/src/index.html
+++ b/src/index.html
@@ -128,10 +128,10 @@
             <div class="hover">
               <button class="btn-main"><span class="fas fa-shopping-basket"></span>  Add to cart</button>
               <div class="counter">
-                <div><h1>25</h1><h2>days</h2></div>
-                <div><h1>10</h1><h2>hrs</h2></div>
-                <div><h1>45</h1><h2>mins</h2></div>
-                <div><h1>30</h1><h2>secs</h2></div>
+                <div><p class="number">25</p><p class="text">days</p></div>
+                <div><p class="number">10</p><p class="text">hrs</p></div>
+                <div><p class="number">45</p><p class="text">mins</p></div>
+                <div><p class="number">30</p><p class="text">secs</p></div>
               </div>
             </div>
           </div>
