Change stars selecting mechanism from class to indexOf, move code to App.js, change section var name

--- a/src/index.html
+++ b/src/index.html
@@ -171,12 +171,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div id="rate1" class="stars">
-                <a class="s1 permanent" href="#"></a>
-                <a class="s2 permanent" href="#"></a>
-                <a class="s3 permanent" href="#"></a>
-                <a class="s4 permanent" href="#"></a>
-                <a class="s5" href="#"></a>
+              <div class="stars">
+                <a class="star permanent" href="#"></a>
+                <a class="star permanent" href="#"></a>
+                <a class="star permanent" href="#"></a>
+                <a class="star permanent" href="#"></a>
+                <a class="star" href="#"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -202,12 +202,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div id="rate2" class="stars">
-                <a class="s1 full" href="#"></a>
-                <a class="s2 full" href="#"></a>
-                <a class="s3" href="#"></a>
-                <a class="s4" href="#"></a>
-                <a class="s5" href="#"></a>
+              <div class="stars">
+                <a class="star full" href="#"></a>
+                <a class="star full" href="#"></a>
+                <a class="star" href="#"></a>
+                <a class="star" href="#"></a>
+                <a class="star" href="#"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -233,12 +233,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div id="rate3" class="stars">
-                <a class="s1 full" href="#"></a>
-                <a class="s2 full" href="#"></a>
-                <a class="s3" href="#"></a>
-                <a class="s4" href="#"></a>
-                <a class="s5" href="#"></a>
+              <div class="stars">
+                <a class="star full" href="#"></a>
+                <a class="star full" href="#"></a>
+                <a class="star" href="#"></a>
+                <a class="star" href="#"></a>
+                <a class="star" href="#"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -264,12 +264,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div id="rate4" class="stars">
-                <a class="s1 full" href="#"></a>
-                <a class="s2 full" href="#"></a>
-                <a class="s3" href="#"></a>
-                <a class="s4" href="#"></a>
-                <a class="s5" href="#"></a>
+              <div class="stars">
+                <a class="star full" href="#"></a>
+                <a class="star full" href="#"></a>
+                <a class="star" href="#"></a>
+                <a class="star" href="#"></a>
+                <a class="star" href="#"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -295,12 +295,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div id="rate5" class="stars">
-                <a class="star s1 full" href="#"></a>
-                <a class="star s2 full" href="#"></a>
-                <a class="star s3" href="#"></a>
-                <a class="s4" href="#"></a>
-                <a class="s5" href="#"></a>
+              <div class="stars">
+                <a class="star full" href="#"></a>
+                <a class="star full" href="#"></a>
+                <a class="star" href="#"></a>
+                <a class="star" href="#"></a>
+                <a class="star" href="#"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -326,12 +326,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div id="rate6" class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+              <div class="stars">
+                <a href="#" class="star full"></a>
+                <a href="#" class="star full"></a>
+                <a href="#" class="star"></a>
+                <a href="#" class="star"></a>
+                <a href="#" class="star"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -357,12 +357,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div id="rate7" class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+              <div class="stars">
+                <a href="#" class="star full"></a>
+                <a href="#" class="star full"></a>
+                <a href="#" class="star"></a>
+                <a href="#" class="star"></a>
+                <a href="#" class="star"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -388,12 +388,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div id="rate8" class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+              <div class="stars">
+                <a href="#" class="star full"></a>
+                <a href="#" class="star full"></a>
+                <a href="#" class="star"></a>
+                <a href="#" class="star"></a>
+                <a href="#" class="star"></a>
               </div>
             </div>
             <div class="line"></div>
