--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,7 @@
           <li class="products-carousel-indicators-li"></li>
           <li class="products-carousel-indicators-li"></li>
         </ol>
-        <div class="products-slider slider">
+        <div class="products-slider">
           <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
             <div class="product-box">
               <div class="photo bg1">
