Simplify .counter structure - from p.class to span

--- a/src/index.html
+++ b/src/index.html
@@ -128,10 +128,10 @@
             <div class="hover">
               <button class="btn-main"><span class="fas fa-shopping-basket"></span>  Add to cart</button>
               <div class="counter">
-                <div><p class="number">25</p><p class="text">days</p></div>
-                <div><p class="number">10</p><p class="text">hrs</p></div>
-                <div><p class="number">45</p><p class="text">mins</p></div>
-                <div><p class="number">30</p><p class="text">secs</p></div>
+                <div>25<span>days</span></div>
+                <div>10<span>hrs</span></div>
+                <div>45<span>mins</span></div>
+                <div>30<span>secs</span></div>
               </div>
             </div>
           </div>
