--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
   <div class="section--features">
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col-sm-6 col-lg-3">
           <a href ="#" class="feature-box active">
             <div class="icon">
               <i class="fas fa-truck"></i>
@@ -124,7 +124,7 @@
             </div>
           </a>
         </div>
-        <div class="col">
+        <div class="col-sm-6 col-lg-3">
           <a href ="#" class="feature-box">
             <div class="icon">
               <i class="fas fa-headphones"></i>
@@ -135,7 +135,7 @@
             </div>
           </a>
         </div>
-        <div class="col">
+        <div class="col-sm-6 col-lg-3">
           <a href ="#" class="feature-box">
             <div class="icon">
               <i class="fas fa-reply-all"></i>
@@ -146,7 +146,7 @@
             </div>
           </a>
         </div>
-        <div class="col">
+        <div class="col-sm-6 col-lg-3">
           <a href ="#" class="feature-box">
             <div class="icon">
               <i class="fas fa-bullhorn"></i>
