Change if statement for taking elem directly from parameter; add example in html

--- a/src/index.html
+++ b/src/index.html
@@ -243,10 +243,10 @@
                       <div class="content">
                         <h5>Bed - item1</h5>
                         <div class="stars">
-                          <a class="star full" href="#"></a>
-                          <a class="star full" href="#"></a>
-                          <a class="star" href="#"></a>
-                          <a class="star" href="#"></a>
+                          <a class="star permanent" href="#"></a>
+                          <a class="star permanent" href="#"></a>
+                          <a class="star permanent" href="#"></a>
+                          <a class="star permanent" href="#"></a>
                           <a class="star" href="#"></a>
                         </div>
                       </div>
