--- a/src/index.html
+++ b/src/index.html
@@ -761,29 +761,61 @@
           </div>
           <div class="col"></div>
           <div class="col-auto dots">
-            <ul>
-              <li><a href="#" class="active"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
+            <ul class="feedback-indicators">
+              <li><a class="carousel-indicator" href="#"></a></li>
+              <li><a class="carousel-indicator" href="#"></a></li>
+              <li><a class="carousel-indicator" href="#"></a></li>
             </ul>
           </div>
         </div>
       </div>
-      <div class="row">
         <div class="col feedback-wrapper">
-            <i class="fas fa-quote-right quote-mark"></i>
-            <p class="feedback-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam magni quibusdam molestias, eligendi suscipit voluptatum inventore culpa minima odio alias possimus id. Dignissimos tenetur, tempore explicabo nemo alias earum deleniti.</p>
-            <div class="feedback-client">
-              <div class="feedback-client-photo">
-                <img class="feedback-client-img" src="https://images.unsplash.com/photo-1474176857210-7287d38d27c6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5deb261ae9b9799a30f929c724286bed&auto=format&fit=crop&w=1950&q=80" alt="">
-              </div>
-              <div class="feedback-client-info">
-                <p class="client-name">John Smith</p>
-                <p class="client-origin">Furniture client</p>
+          <div>
+            <div class="feedback-slide">
+              <i class="fas fa-quote-right quote-mark"></i>
+              <p class="feedback-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam magni quibusdam molestias, eligendi suscipit voluptatum inventore culpa minima odio alias possimus id. Dignissimos tenetur, tempore explicabo nemo alias earum deleniti.</p>
+              <div class="feedback-client">
+                <div class="feedback-client-photo">
+                  <img class="client-img" src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3fe86942ba7d33a22051461fa905b1bf&auto=format&fit=crop&w=934&q=80" alt="">
+                </div>
+                <div class="feedback-client-info">
+                  <p class="client-name">Jemma Smith</p>
+                  <p class="client-origin">Furniture expert</p>
+                </div>
               </div>
             </div>
+          </div>
+          <div>
+            <div class="feedback-slide">
+              <i class="fas fa-quote-right quote-mark"></i>
+              <p class="feedback-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam magni quibusdam molestias, eligendi suscipit voluptatum inventore culpa minima odio alias possimus id. Dignissimos tenetur, tempore explicabo nemo alias earum deleniti.</p>
+              <div class="feedback-client">
+                <div class="feedback-client-photo">
+                  <img class="client-img" src="https://images.unsplash.com/photo-1519180091-1ba90342d1af?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=991cd0bbdad4a795fdea7e0678b0ae82&auto=format&fit=crop&w=934&q=80" alt="">
+                </div>
+                <div class="feedback-client-info">
+                  <p class="client-name">Jaden Smith</p>
+                  <p class="client-origin">Bed tester</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="feedback-slide">
+              <i class="fas fa-quote-right quote-mark"></i>
+              <p class="feedback-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam magni quibusdam molestias, eligendi suscipit voluptatum inventore culpa minima odio alias possimus id. Dignissimos tenetur, tempore explicabo nemo alias earum deleniti.</p>
+              <div class="feedback-client">
+                <div class="feedback-client-photo">
+                  <img class="client-img" src="https://images.unsplash.com/photo-1474176857210-7287d38d27c6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5deb261ae9b9799a30f929c724286bed&auto=format&fit=crop&w=1950&q=80" alt="">
+                </div>
+                <div class="feedback-client-info">
+                  <p class="client-name">John Smith</p>
+                  <p class="client-origin">Furniture client</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
     </div>
   </div>
   
