Add RWD to section New Furniture

--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="product-box">
             <div class="photo">
               <img class="photo__image" src="./images/new/bed/01.jpg">
@@ -192,7 +192,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="product-box">
             <div class="photo">
               <img class="photo__image" src="./images/new/bed/02.jpg">
@@ -224,7 +224,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="product-box">
             <div class="photo">
               <img class="photo__image" src="./images/new/bed/03.jpg">
@@ -256,7 +256,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="product-box">
             <div class="photo">
               <img class="photo__image" src="./images/new/bed/04.jpg">
@@ -288,7 +288,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="product-box">
             <div class="photo">
               <img class="photo__image" src="./images/new/bed/05.jpg">
@@ -320,7 +320,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="product-box">
             <div class="photo">
               <img class="photo__image" src="./images/new/bed/06.jpg">
@@ -352,7 +352,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="product-box">
             <div class="photo">
               <img class="photo__image" src="./images/new/bed/07.jpg">
@@ -384,7 +384,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="product-box">
             <div class="photo">
               <img class="photo__image" src="./images/new/bed/08.jpg">
