--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
   <div class="section--features">
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
           <div class="feature-box active">
             <div class="icon">
               <i class="fas fa-truck"></i>
@@ -98,7 +98,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
           <div class="feature-box">
             <div class="icon">
               <i class="fas fa-headphones"></i>
@@ -109,7 +109,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
           <div class="feature-box">
             <div class="icon">
               <i class="fas fa-reply-all"></i>
@@ -120,7 +120,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
           <div class="feature-box">
             <div class="icon">
               <i class="fas fa-bullhorn"></i>
