Add left slider (hot deals) with autoplay

--- a/src/index.html
+++ b/src/index.html
@@ -113,50 +113,144 @@
   <div class="section--features">
     <div class="container features">
       <div class="row">
-        <div class="col col-4 hot-deals">
+        <div class="col col-4 hot-deals carousel slide" id="carousel1" data-ride="carousel" data-interval=3000>
+          
           <div class="top-bar">
-            Hot deals
+          Hot deals
+<!-- carousel indicators-->
             <div class="dots">
-                <ul>
-                  <li class="active"><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                </ul>
+              <ol class="carousel-indicators">
+                <li class="active" data-target="#carousel1" data-slide-to="0"></li>
+                <li data-target="#carousel1" data-slide-to="1"></li>
+                <li data-target="#carousel1" data-slide-to="2"></li>
+              </ol>
             </div>
           </div>
-          <div class="photo text-center">
-            <div class="hover">
-              <button class="btn-main"><span class="fas fa-shopping-basket"></span>  Add to cart</button>
-              <div class="counter">
-                <div>25<span>days</span></div>
-                <div>10<span>hrs</span></div>
-                <div>45<span>mins</span></div>
-                <div>30<span>secs</span></div>
+
+          <div class="carousel-inner">
+<!-- slide 1 -->
+            <div class="carousel-item active">
+
+              <div class="photo ph1 text-center">
+                <div class="hover">
+                  <button class="btn-main"><span class="fas fa-shopping-basket"></span>  Add to cart</button>
+                  <div class="counter">
+                    <div>25<span>days</span></div>
+                    <div>10<span>hrs</span></div>
+                    <div>45<span>mins</span></div>
+                    <div>30<span>secs</span></div>
+                  </div>
+                </div>
               </div>
+
+              <div class="bottom-bar">
+                <p>Aenean Ru Britisque</p>
+                <div class="stars">
+                  <a href="#" class="full"></a>
+                  <a href="#" class="full"></a>
+                  <a href="#"></a>
+                  <a href="#"></a>
+                  <a href="#"></a>
+                </div>
+                <div class="slider">
+                  <div class="slide1"></div>
+                </div>
+                <div class="outlines">
+                  <a href="#" class="btn-outline"><i class="fas fa-eye"></i></a>
+                  <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+                  <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
+                </div>
+                <div class="price">
+                  <div class="price-old">$ 105.00</div>
+                  <div class="btn-main-small">$ 80.00</div>
+                </div>
+              </div>
+
             </div>
-          </div>
-          <div class="bottom-bar">
-            <p>Aenean Ru Britisque</p>
-            <div class="stars">
-              <a href="#" class="full"></a>
-              <a href="#" class="full"></a>
-              <a href="#"></a>
-              <a href="#"></a>
-              <a href="#"></a>
-            </div>
-            <div class="slider">
-              <div class="slide1"></div>
-            </div>
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="fas fa-eye"></i></a>
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price">
-              <div class="price-old">$ 35.00</div>
-              <div class="btn-main-small">$ 30.00</div>
-            </div>
-          </div>
+
+<!-- slide 2 -->
+            <div class="carousel-item">
+
+                <div class="photo ph2 text-center">
+                  <div class="hover">
+                    <button class="btn-main"><span class="fas fa-shopping-basket"></span>  Add to cart</button>
+                    <div class="counter">
+                      <div>10<span>days</span></div>
+                      <div>03<span>hrs</span></div>
+                      <div>40<span>mins</span></div>
+                      <div>20<span>secs</span></div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="bottom-bar">
+                  <p>Aenean Ru Scandi</p>
+                  <div class="stars">
+                    <a href="#" class="full"></a>
+                    <a href="#" class="full"></a>
+                    <a href="#" class="full"></a>
+                    <a href="#" class="full"></a>
+                    <a href="#"></a>
+                  </div>
+                  <div class="slider">
+                    <div class="slide1"></div>
+                  </div>
+                  <div class="outlines">
+                    <a href="#" class="btn-outline"><i class="fas fa-eye"></i></a>
+                    <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+                    <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+                  </div>
+                  <div class="price">
+                    <div class="price-old">$ 65.00</div>
+                    <div class="btn-main-small">$ 55.00</div>
+                  </div>
+                </div>
+
+              </div>
+
+  <!-- slide 3 -->
+              <div class="carousel-item">
+
+                  <div class="photo ph3 text-center">
+                    <div class="hover">
+                      <button class="btn-main"><span class="fas fa-shopping-basket"></span>  Add to cart</button>
+                      <div class="counter">
+                        <div>15<span>days</span></div>
+                        <div>11<span>hrs</span></div>
+                        <div>49<span>mins</span></div>
+                        <div>10<span>secs</span></div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="bottom-bar">
+                    <p>Aenean Ru Francois</p>
+                    <div class="stars">
+                      <a href="#" class="full"></a>
+                      <a href="#" class="full"></a>
+                      <a href="#" class="full"></a>
+                      <a href="#"></a>
+                      <a href="#"></a>
+                    </div>
+                    <div class="slider">
+                      <div class="slide1"></div>
+                    </div>
+                    <div class="outlines">
+                      <a href="#" class="btn-outline"><i class="fas fa-eye"></i></a>
+                      <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+                      <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+                    </div>
+                    <div class="price">
+                      <div class="price-old">$ 35.00</div>
+                      <div class="btn-main-small">$ 30.00</div>
+                    </div>
+                  </div>
+
+                </div>
+          
+
+
+        </div>
         </div>
         <div class="col col-8 furniture text-center">
           <div class="content">
@@ -172,7 +266,7 @@
       </div>
     </div>
 
-<!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-lg-3">
