--- a/src/index.html
+++ b/src/index.html
@@ -711,13 +711,18 @@
                   <div class="gallery-tabContent-tabPane-carousel-inner-item gallery-item-bg1 carousel-item active">
                     <div class="gallery-tabContent-tabPane-carousel-inner-item-productInfo ">
                       <div class="gallery-tabContent-tabPane-carousel-inner-item-productInfo-outlines">
-                        <div class="gallery-tabContent-tabPane-carousel-inner-item-productInfo-btnContainer ">
+                        <div class="gallery-tabContent-tabPane-carousel-inner-item-productInfo-outlines-btnContainer ">
                           <a href="#" class="btn-outline" data-toggle="tooltip" data-placement="right" title="Add To Favorites"><i class="far fa-heart"></i></a>
                         </div>
-                        <div class="gallery-tabContent-tabPane-carousel-inner-item-productInfo-btnContainer ">
-                            <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+                        <div class="gallery-tabContent-tabPane-carousel-inner-item-productInfo-outlines-btnContainer ">
+                            <a href="#" class="btn-outline" data-toggle="tooltip" data-placement="right" title="Add To Comparison"><i class="fas fa-exchange-alt"></i></a>
                         </div>
-  
+                        <div class="gallery-tabContent-tabPane-carousel-inner-item-productInfo-outlines-btnContainer ">
+                            <a href="#" class="btn-outline" data-toggle="tooltip" data-placement="right" title="See Details"><i class="far fa-eye"></i></a>
+                        </div>
+                        <div class="gallery-tabContent-tabPane-carousel-inner-item-productInfo-outlines-btnContainer ">
+                            <a href="#" class="btn-outline" data-toggle="tooltip" data-placement="right" title="Add To Cart"><i class="fas fa-shopping-basket"></i></a>
+                        </div>
                       </div>
                     </div>  
                   </div>
@@ -745,16 +750,23 @@
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
-                <ol class="gallery-tabContent-tabPane-carousel-indicators carousel-indicators">
-                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="gallery-tabContent-tabPane-carousel-indicators-item active"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="1" class="gallery-tabContent-tabPane-carousel-indicators-item"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="2" class="gallery-tabContent-tabPane-carousel-indicators-item"></li>
-                </ol>
+                <div class="gallery-tabContent-tabPane-carousel-indicatorsContainer ">
+                  <ol class="gallery-tabContent-tabPane-carousel-indicatorsContainer-indicators carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="gallery-tabContent-tabPane-carousel-indicatorsContainer-indicators-item active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1" class="gallery-tabContent-tabPane-carousel-indicatorsContainer-indicators-item"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2" class="gallery-tabContent-tabPane-carousel-indicatorsContainer-indicators-item"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="3" class="gallery-tabContent-tabPane-carousel-indicatorsContainer-indicators-item"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4" class="gallery-tabContent-tabPane-carousel-indicatorsContainer-indicators-item"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="5" class="gallery-tabContent-tabPane-carousel-indicatorsContainer-indicators-item"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="6" class="gallery-tabContent-tabPane-carousel-indicatorsContainer-indicators-item"></li>
+                  </ol>
+                </div>
                 <a class="gallery-tabContent-tabPane-carousel-control--next carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
               </div>
+            </div>  
             <div class="gallery-tabContent-tabPane tab-pane fade show active" id="topSeller" role="tabpanel" aria-labelledby="topSeller-tab"> 
 
             </div>
@@ -765,7 +777,7 @@
 
             </div>
           </div>
-          </div>
+         
         </div>  
         <div class="col-6">
           <div class="gallery-ad container">
