Solve problem with right slider styles

--- a/src/index.html
+++ b/src/index.html
@@ -255,26 +255,32 @@
           <div class="carousel-inner">
 <!-- slide 1 -->
             <div class="carousel-item active fur1">
-              <div class="content">
-                <h1>Indoor <span>furniture</span></h1>
-                <h2>Save up to 50% of all furniture</h2>
-                <button class="btn-main">Shop now</button>
+              <div class="contentBox">
+                <div class="content">
+                  <h1>Indoor <span>furniture</span></h1>
+                  <h2>Save up to 50% of all furniture</h2>
+                  <button class="btn-main">Shop now</button>
+                </div>
               </div>
             </div>
 
             <div class="carousel-item fur2">
-              <div class="content">
-                <h1>Outdoor <span>furniture</span></h1>
-                <h2>Save up to 25% in season</h2>
-                <button class="btn-main">Shop now</button>
+              <div class="contentBox">
+                <div class="content">
+                  <h1>Outdoor <span>furniture</span></h1>
+                  <h2>Save up to 25% of all furniture</h2>
+                  <button class="btn-main">Shop now</button>
+                </div>
               </div>
             </div>
 
             <div class="carousel-item fur3">
-              <div class="content">
-                <h1>Stylish <span>decorations</span></h1>
-                <h2>Save 30% on every order bigger than 50$</h2>
-                <button class="btn-main">Shop now</button>
+              <div class="contentBox">
+                <div class="content">
+                  <h1>Stylish <span>decorations</span></h1>
+                  <h2>Save up to 50% with every order</h2>
+                  <button class="btn-main">Shop now</button>
+                </div>
               </div>
             </div>
             
