--- a/src/index.html
+++ b/src/index.html
@@ -207,7 +207,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="col">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4">
           <a href="#">
             <div class="feature-box">
               <div class="icon">
@@ -220,7 +220,7 @@
             </div>
           </a>
         </div>
-        <div class="col">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4">
           <a href="#">
             <div class="feature-box">
               <div class="icon">
@@ -233,7 +233,7 @@
             </div>
           </a>
         </div>
-        <div class="col">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4">
           <a href="#">
             <div class="feature-box">
               <div class="icon">
@@ -246,7 +246,7 @@
             </div>
           </a>
         </div>
-        <div class="col">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4">
           <a href="#">
             <div class="feature-box">
               <div class="icon">
